src/objects/Option__c.object
<CustomObject>
    <description>Answer option for a survey question</description>
    <fields>
        <fullName>Caption__c</fullName>
        <label>Caption</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PPIScore__c</fullName>
        <description>The score that PpiScoreValue__c contains. This needs to be manually updated via a trigger each time the PpiScoreValue__c is changed. If PpiScoreValue__c is blank then this left blank. Should only be set by the trigger on ScoreValue__c</description>
        <label>PPI Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>Position of the option within the option group</description>
        <label>Position</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Parent question</description>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Options</relationshipLabel>
        <relationshipName>Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RemoteId__c</fullName>
        <description>The Id of Option as it is in the org that the group was downloaded from</description>
        <externalId>true</externalId>
        <label>Remote Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Option</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>